# DRF-Shop

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  entrypoint.sh  pyproject.toml  pytest.ini
 tests/mock/: conftest.py  test_create_order.py
 tests/unit/factories/: products.py
 tests/unit/services/: conftest.py  test_orders.py  test_products.py  test_validate_data_orders.py
core/api/: base_response.py  urls.py
core/api/v1/orders/: handlers.py
core/api/v1/products/: handlers.py
core/api/v1/users/: handlers.py
core/apps/common/: base_exceptions.py  config.py  models.py
core/apps/common/utils/: repository.py
core/apps/orders/: admin.py  apps.py
core/apps/orders/config/: order_config.py
core/apps/orders/exceptions/: base_order_exception.py  database_orders_exceptions.py  orders_exceptions.py  validation_orders_exceptions.py
core/apps/orders/migrations/: 0001_initial.py  0002_rename_name_ordersitem_title.py  0003_ordersitem_discount.py
core/apps/orders/models/: orders.py
core/apps/orders/schemas/: base_validator.py  order.py  validations.py
core/apps/orders/serializers/: orders_serializers.py
core/apps/orders/services/: order_service.py  validate_products.py  validation_order.py
core/apps/products/: admin.py
core/apps/users/: apps.py  exception.py  serializers.py  service.py
core/project/: asgi.py  containers.py  urls.py  wsgi.py
core/project/settings/: local.py  local_example.py  main.py
docker_compose/: app.yaml  monitoring.yaml  postgres.yaml
docker_compose/fluent-bit/: fluent-bit.conf
nginx/: mime.types  nginx.conf
(+9 files in other folders)
